# crablog

./: Makefile  README.md
site/: Cargo.toml
site/content/static/css/: blog.css
site/content/templates/: about.html  article.html.macro  base.html  blog-all-posts.html  blog-by-id.html  blog.html  edit-form.html  edit.html  submit.html
site/src/: api.rs  config.rs  db.rs  form_data.rs  main.rs  models.rs  routes.rs  schema.rs
site/src/db/: models.rs
