[package]
name = "crablog"
version = "0.4.0"
authors = ["mtrx <me@mtrx.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", features = ["serde"] }
actix-web = "4.5.1"
actix-files = "0.6.5"

serde = { version = "1.0.201", features = ["derive"] }
serde_json = "*"
serde_derive = "*"

diesel = { version = "1.4.6", default-features = false, features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.16.1", default-features = false }

uuid = { version = "1.8.0", features = ["serde", "v5"] }

tera = "1.8.0"

once_cell = "1.7.2"

env_logger = "0.8.3"
