[package]
name = "crablog"
version = "0.4.0"
authors = ["mtrx <me@mtrx.tech>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4.5.1"
actix-files = "0.6.5"

serde = { version = "1.0.201", features = ["derive"] }
serde_json = "*"
serde_derive = "*"

diesel = { version = "2.1.0", default-features = false, features = ["sqlite", "chrono"] }
dotenvy = "0.15"

uuid = { version = "1.8.0", features = ["serde", "v5"] }

tera = "1.18.1"

once_cell = "1.7.2"

env_logger = "0.11.3"
actix-identity = "0.8.0"
actix-session = {version = "0.10.1", default-features = false, features = ["cookie-session"]}
